--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   --on-primary:rgb(250, 250, 250);
   --on-background:rgb(66, 66, 66);
   --on-background-alt: rgba(66, 66, 66, 0.7);
-  --background:rgb(255,255,255);
+  --background:rgb(255, 255, 255);
   --box-shadow:0 5px 20px 1px rgba(0, 0, 0, 0.5);
 }
 
@@ -16,8 +16,8 @@
     --primary-variant:#6c63ff;
     --secondary-color:#03dac5;
     --on-primary:#000;
-    --on-background:rgba(255, 255, 255 0.9);
-    --on-background-alt:rgba(255, 255, 255 0.7);
+    --on-background:rgba(255, 255, 255, 0.9);
+    --on-background-alt:rgba(255, 255, 255, 0.7);
     --background:#121212;
 }
 
@@ -161,7 +161,7 @@ button:hover:not(.outline) {
 .text-box {
     width: 40%;
     text-align: justify;
-    background: rgb(0 0 0 / 50%);
+    background: rgb(0, 0, 0 / 50%);
     color: var(--on-primary);
     border-radius: 10px;
     padding: 30px;
