--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ nav {
     z-index: 10;
     position: fixed;
     font-size: 24px;
-    font-family:Robot Mono, sans-serif;
+    font-family: 'Robot Mono', sans-serif;
     letter-spacing: 3px;
     padding: 25px;
     width: 100vw;
